# depctg.github.io

./: homepage.cabal  index.html  site.hs  stack.yaml
.github/workflows/: haskell.yml
css/: default.css
data/: artworks.yaml  awards.yaml  experience.yaml  publications.yaml  services.yaml
news/: 2020-08-25.md
pages/: about.md
templates/: default.html
